--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,8 @@
 .App {
-  text-align: center;
+  margin-left: 100px;
 }
 
 .header {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   font-size: calc(10px + 2vmin);
