--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,49 @@
 .App {
-  margin-left: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header {
   display: flex;
-  flex-direction: column;
   font-size: calc(10px + 2vmin);
+}
+
+h1 {
+  font-size: 1.5em;
+}
+
+h2 {
+  font-size: 1.2em;
+}
+
+h3 {
+  font-size: 1em;
+}
+
+
+/* TASK */
+.task {
+  width: 100%;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.task-container {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  padding: 2% 4%;
+  margin-top: 20px;
+}
+
+.task-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.task-name {
+  display: flex;
 }
