--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,7 +28,6 @@ h3 {
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
-  margin-bottom: 50px;
 }
 
 .task-container {
@@ -46,4 +45,20 @@ h3 {
 
 .task-name {
   display: flex;
+}
+
+
+/* FORM */
+.form {
+  padding: 20px;
+  width: 60%;
+  padding: 2% 4%;
+}
+
+.form-details {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 0 60px;
 }
