--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,6 +43,15 @@ h3 {
   justify-content: space-between;
 }
 
+.edit-comments {
+  display: flex;
+  align-items: center;
+}
+
+.edit-icon {
+  margin-right: 20px;
+}
+
 .task-name {
   display: flex;
 }
